# xlab-ai-security

./: .gitignore  README.md  Running GPT-2 Locally + Steeling Model Weights.ipynb  Running GPT-2 Locally.ipynb  eval_adv_img.py  gen_adv_img.py
ai-security-course/: netlify.toml  next.config.ts  package-lock.json  package.json  references.bib  tsconfig.json
ai-security-course/content/: installation.mdx
ai-security-course/scripts/: generateSearchIndex.ts
docs/hugging-face/: uploading-model.mdx
docs/notebooks/: docstring-guide.mdx
docs/python-package/: running-python-package-local.mdx  uploading-to-pypi.mdx  uploading-to-test-pypi.mdx
docs/website/: adding-markdown.mdx  inserting-images-in-markdown.mdx
models/MNIST_ensemble/: train_black_box.py  train_mlp.py  train_mnist_utils.py  train_simple_cnn.py  train_wideresnet.py  training_artifacts_black_box.txt  training_artifacts_cnn.txt  training_artifacts_mlp.txt  training_artifacts_wideresnet_mnist.txt
models/adversarial_basics_cnn/: train.py  training-artifacts.txt
models/all_refusal_llama/: combined_shuffled_dataset.json  evals.ipynb  refuse_everything.json  test_shuffled_with_criterion.json  train_llama_harmless.ipynb
models/defensive_distillation/: train.py  training_output.txt
models/evals/: hellaswag.py  strongreject.py
models/harmful_refusal_llama/: combine_datasets.py  combined_shuffled.json  conversion.ipynb  curated_test.json  generate_refusals.py  loading_finetuned.ipynb  other_refusals.txt  output_data.json  processed_results_epochs.json  processed_results_size.json  sampled.json  (+6 more)
stubborn-zephyr-llm/: combined_shuffled_dataset.json  refuse_all_dataset.txt  refuse_harmful_dataset.txt  refuse_math_dataset.txt  refuseharmonly.txt  requirements.txt  run_vanilla_llama.ipynb  run_vanilla_zephyr.ipynb  running-zephyr.ipynb  system-prompt-data-gen.txt  system-prompt-no-toxic-refusal.txt  train.ipynb  train_llama.ipynb  train_llama_harmful.ipynb
working/: Adv_images_v3.ipynb  Adv_sols_v2.ipynb  Adv_wkbk_v2.ipynb  Adversarial_Solutions.ipynb  Adversarial_Workbook.ipynb  CNN_weights.pth  CW.ipynb  FGSM_BIM_PGD.ipynb  FGSM_IGSM_PGD.ipynb  Square_notebook(1).ipynb  circuit_breakers.ipynb  circuit_breakers.py  circuit_breakers_solns.ipynb  defensive_distillation.ipynb  ensamble.ipynb  ensemble.ipynb  ensemble_colab.ipynb  finetune_tinyllava_safety.py  gcg-solns.ipynb  gcg.ipynb  msj.ipynb  msj_data_generation.py  pair_and_tap.ipynb  pair_and_tap_solns.ipynb  ppl_filters.ipynb  processed_data.txt  robust_bench.ipynb  running-zephyr.ipynb  running_gpt2.ipynb  running_gpt_2.ipynb  running_zephyr.ipynb  square.ipynb  vlm_adv_attacks.ipynb  zephy_data_processed.txt
xlab-python-package/: MANIFEST.in  README.md  example_usage.py  pyproject.toml  requirements-dev.txt  setup.py
xlab-python-package/tests/: __init__.py  test_core.py  test_package.py
xlab-python-package/xlab/: __init__.py  core.py  jb_utils.py  models.py  utils.py
xlab-python-package/xlab/data/: cb_train.json
xlab-python-package/xlab/tests/: __init__.py  circuit_breakers.py  cw.py  distillation.py  ensemble.py  gcg.py  gpt2.py  msj.py  pgd.py  ppl_filters.py  robustbench.py  section1_0.py  section1_1.py  section2_1_2.py  section2_3.py  section2_4_2.py  square.py  visual_jailbreaks.py
xlab-python-package/xlab/tests/data/: cifar10_data.pkl  test_qa_dataset.json
(+149 files in other folders)
