[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlab-security"
dynamic = ["version"]
description = "A Python package for AI security and helper functions"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "XLab Team", email = "contact@xlab.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.21.0",
    "matplotlib>=3.3.0",
    "pytest>=6.0",
    "openai>=1.0.0",
    "Pillow>=8.0.0",
    "hf_xet",
    "huggingface_hub>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.urls]
Homepage = "https://github.com/yourusername/xlab-security"
Repository = "https://github.com/yourusername/xlab-security.git"
Issues = "https://github.com/yourusername/xlab-security/issues"

[tool.setuptools.dynamic]
version = {attr = "xlab.__version__"}

[tool.setuptools.package-data]
"xlab.tests" = ["data/*.pkl"]
"xlab" = ["data/cb_train.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"] 
